# filescope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
data/: dev.filescope.Filescope.desktop
packaging/: install.sh
src/: archive.rs  bookmarks.rs  fileops.rs  format.rs  main.rs  ops.rs  preview.rs  settings.rs  trash.rs  undo.rs  window.rs
