[package]
name = "filescope"
description = "A fast, nice-looking file manager for Linux"
version = "0.3.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "filescope"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
# For getuid/getgid, so an ntfs-3g mount is owned by the current user.
libc = "0.2"
# Worker-thread → GTK-main-loop channel for the background file-op engine.
async-channel = "2"
